k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-post-k8s-cm-le
  labels:
    name: blog-post-k8s-cm-le
