k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
