k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
