k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-nginx-ingress
spec:
  ingressClassName: ingress-traefik
  tls:
    - hosts:
        - library-dev.productdock.rs
      secretName: tls-secret
  rules:
    - host: library-dev.productdock.rs
      http:
        paths:
          - path: /simple-nginx
            pathType: Prefix
            backend:
              service:
                name: simple-nginx-service
                port:
                  name: http
