k8s/deny-all-netpoll.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-netpol
spec:
  podSelector: { }
  policyTypes:
    - Ingress
    - Egress
